--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,31 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <style type="text/css">
+   .block1 {
+    font-size: 100%;
+    font-family: Verdana;
+    width: 400px;
+    background: white;
+    padding: 5px;
+    padding-right: 10px;
+    float: top;
+    text-align: center;
+   }
+
+   h1 {
+   text-align: center;
+   font-family: consolas;
+   }
+
+   h3 {
+   text-align: center;
+
+   }
+  </style>
     <title>{% block title %}{% endblock %} - Должник</title>
 </head>
-<body>
+<body style="font-family:Arial, Verdana, sans-serif; font-size:18px">
 <table cellpadding="15" border="0" rules="cols">
     <tr>
         <td valign="top">
@@ -14,14 +36,14 @@
                 <table cellpadding="5" border="0" rules="rows">
                     {% for budget in g.saved_budgets %}
                     <tr><td valign="top" align="center">
-                        <a href="{{url_for('print_budget', budget_file=budget)}}" title="Посмотреть отчёт"><font face="Tahoma" size="4">{{budget[:-4]}}</font></a><br>
-                        <a href="{{url_for('edit_budget', budget_file=budget)}}" title="Редактировать">
+                        <a href="{{url_for('budget.print_budget', budget_file=budget)}}" title="Посмотреть отчёт"><font face="Tahoma" size="4">{{budget[:-4]}}</font></a><br>
+                        <a href="{{url_for('budget.edit_budget', budget_file=budget)}}" title="Редактировать">
                             <img src={{url_for('static', filename='edit.png')}} alt="Редактировать" border="0"
                                  width="17" height="17"></a>
-                        <a href="{{url_for('delete_budget', budget_file=budget)}}" title="Удалить">
+                        <a href="{{url_for('budget.delete_budget', budget_file=budget)}}" title="Удалить">
                             <img src={{url_for('static', filename='cross.png')}} alt="Удалить" border="0"
                                  width="17" height="17"></a>
-                        <a href="{{url_for('copy_budget', budget_file=budget)}}" title="Создать копию">
+                        <a href="{{url_for('budget.copy_budget', budget_file=budget)}}" title="Создать копию">
                             <img src={{url_for('static', filename='cpy.png')}} alt="Создать копию" border="0"
                                  width="17" height="17"></a>
                     </td></tr>
@@ -29,7 +51,7 @@
                 </table>
             </nav>
         </td>
-        <td>
+        <td valign="top">
             {% block header %}{% endblock %}
             {% block content %}{% endblock %}
         </td>
