--- a/templates/report.html
+++ b/templates/report.html
@@ -19,7 +19,7 @@
 <table border="0" cellspacing="3">
     {% for p in budget.persons_list %}
     <tr>
-        <td>{{p.name()}}</td><td>{{p.weight()}}</td><td>{{p.pays_for}}</td>
+        <td>{{p.name()}}</td><td>{{p.weight()}}</td><td>{% if p.pays_for.strip().__len__()>0 %} платит за {{p.pays_for}} {% endif %}</td>
     </tr>
     {% endfor %}
 </table>
@@ -87,11 +87,11 @@
     </tr>
     {% endfor %}
 </table>
-Сумма всех долгов: {{"{0:8.2f}".format(budget.get_debt_sum())}}.<br>
+Сумма всех долгов: {{"{0:8.2f}".format(budget.get_debt_sum())}} Р.<br>
 Сумма положительных долгов: {{"{0:8.2f}".format(budget.get_positive_debt_sum())}} Р.
 <hr>
 
-<table>
+<table cellpadding="5">
     {% for op in budget.debt_operations_list %}
     <tr>
         <td>{{op.debtor.name()}}</td><td> ----> </td><td>{{op.creditor.name()}}</td><td>{{"{0:8.2f}".format(op.amount)}} Р</td>
