--- a/templates/base.html
+++ b/templates/base.html
@@ -7,24 +7,17 @@
     font-size: 100%;
     font-family: Verdana;
     width: 400px;
+    margin-left: auto;
+    margin-right: auto;
     background: white;
-    padding: 5px;
-    padding-right: 10px;
-    float: top;
     text-align: center;
    }
    .footer {
     font-size: 60%;
     font-family: Arial;
     font-color: gray;
-    background: white;
-    padding-top: 50px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-    height: 10px;
-    margin-top: -10px;
+    padding-top: 10px;
+    margin-left: 450px;
    }
 
    h1 {
@@ -36,10 +29,11 @@
    text-align: center;
 
    }
-  </style>
+
+    </style>
     <title>{% block title %}{% endblock %} - Должник</title>
 </head>
-<body style="font-family:Arial, Verdana, sans-serif; font-size:18px">
+<body style="font-family:Arial, Verdana, sans-serif;  font-size:1.5rem; ">
 <table cellpadding="15" border="0" rules="cols">
     <tr>
         <td valign="top">
@@ -48,18 +42,21 @@
                 <hr>
                 <table cellpadding="5" border="0" rules="rows">
                     {% for budget in g.saved_budgets %}
-                    <tr><td valign="top" align="center">
-                        <a href="{{url_for('budget.print_budget', budget_file=budget)}}" title="Посмотреть отчёт"><font face="Tahoma" size="4">{{budget[:-4]}}</font></a><br>
-                        <a href="{{url_for('budget.edit_budget', budget_file=budget)}}" title="Редактировать">
-                            <img src={{url_for('static', filename='edit.png')}} alt="Редактировать" border="0"
-                                 width="17" height="17"></a>
-                        <a href="{{url_for('budget.delete_budget', budget_file=budget)}}" title="Удалить">
-                            <img src={{url_for('static', filename='cross.png')}} alt="Удалить" border="0"
-                                 width="17" height="17"></a>
-                        <a href="{{url_for('budget.copy_budget', budget_file=budget)}}" title="Создать копию">
-                            <img src={{url_for('static', filename='cpy.png')}} alt="Создать копию" border="0"
-                                 width="17" height="17"></a>
-                    </td></tr>
+                    <tr>
+                        <td valign="top" align="center">
+                            <a href="{{url_for('budget.print_budget', budget_file=budget)}}"
+                               title="Посмотреть отчёт">{{budget[:-4]}}</a><br>
+                            <a href="{{url_for('budget.edit_budget', budget_file=budget)}}" title="Редактировать">
+                                <img src={{url_for('static', filename='edit.png' )}} alt="Редактировать" border="0"
+                                     width="17" height="17"></a>
+                            <a href="{{url_for('budget.delete_budget', budget_file=budget)}}" title="Удалить">
+                                <img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"
+                                     width="17" height="17"></a>
+                            <a href="{{url_for('budget.copy_budget', budget_file=budget)}}" title="Создать копию">
+                                <img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"
+                                     width="17" height="17"></a>
+                        </td>
+                    </tr>
                     {% endfor %}
                 </table>
             </nav>
@@ -67,12 +64,11 @@
         <td valign="top">
             {% block header %}{% endblock %}
             {% block content %}{% endblock %}
-            <div class="footer">
-                by ukrop. 2019
-            </div>
         </td>
     </tr>
 </table>
-
+<div class="footer">
+    by ukrop. 2019
+</div>
 </body>
 </html>
