--- a/templates/editspending.html
+++ b/templates/editspending.html
@@ -17,11 +17,9 @@
 {% block content %}
 <hr>
 
-<datalist id="personslist">
-    {% for person in budget.persons_list %}<option>{{person.name()}}</option>{% endfor %}
-</datalist>
 
-<form name="editspendinghead" method="post" action="{{url_for('edit_spending_edit_head', budget_file=budget_file)}}">
+<form name="editspendinghead" method="post" id="editspendinghead"
+      action="{{url_for('edit_spending_edit_head', budget_file=budget_file)}}">
     <table border="0" cellpadding="3" rules="rows">
         <tr>
             <td><b>Сумма</b></td><td><b>Описание</b></td><td><b>Оплатил</b></td>
@@ -34,7 +32,9 @@
                 <input name="spendingmemo" type="text" value="{{spending.memo}}" size="20">
             </td>
             <td>
-                <input name="spendingpayer" type="text" value="{{spending.payer.name()}}" list="personslist" size="20">
+                <select name="spendingpayer" form="editspendinghead">
+                    {% for person in budget.persons_list %}<option>{{person.name}}</option>{% endfor %}
+                </select>
             </td>
             <td>
                 <input type="image" alt="Ок" src="{{url_for('static', filename='ok.png')}}">
@@ -55,7 +55,7 @@
     {% for c in spending.consumers_list %}
     <tr>
         <td>{{"{0:8.2f}".format(c.amount)}}</td>
-        <td>{{c.who.name()}}</td>
+        <td>{{c.person.name}}</td>
         <td>
             <form method="post" name="deleteperson"
                   action="{{url_for('edit_spending_remove_person', budget_file=budget_file, consumer_number=spending.consumers_list.index(c))}}">
@@ -67,13 +67,15 @@
     {% if spending.is_calculated() %}
     {% else %}
     <tr>
-    <form method="post" name="addperson"
+    <form method="post" name="addperson" id="addperson"
           action="{{url_for('edit_spending_add_person', budget_file=budget_file)}}">
         <td>
             <input name="amount" type="text" size="10" value="0">
         </td>
         <td>
-            <input name="name" type="text" list="personslist" size="10">
+            <select name="name" form="addperson">
+                {% for person in budget.persons_list %}<option>{{person.name}}</option>{% endfor %}
+            </select>
         </td>
         <td>
             <input name="addperson" type="image" src="{{url_for('static', filename='plus.png')}}"  alt="Добавить">
@@ -98,7 +100,7 @@
       action="{{url_for('edit_spending_ok', budget_file=budget_file)}}">
 <table>
     <tr>
-        {% if spending.is_calculated() and budget.is_participant(spending.payer.name()) %}
+        {% if spending.is_calculated() and budget.is_participant(spending.payer.name) %}
         <td><input name="ok" type="submit" value="Добавить" ></td>
         {% else %}
         <td><input name="ok" type="submit" value="Добавить" disabled ></td>
